--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ body {
 }
 
 .topnav a:hover {
-  background-color: white;
+  background-color: orange;
   color: black;
 }
 
@@ -41,7 +41,7 @@ body {
 }
 
 .botnav a:hover {
-  background-color: white;
+  background-color: orange;
   color: black;
 }
 
@@ -110,7 +110,7 @@ body {
   height: 25px;
   right: -17px;
   background-color: white;
-  border: 4px solid rgb(255, 102, 0);
+  border: 4px solid orange;
   top: 15px;
   border-radius: 50%;
   z-index: 1;
