--- a/main.css
+++ b/main.css
@@ -110,6 +110,28 @@ body {
   height: 25px;
   right: -17px;
   background-color: white;
+  border: 4px solid white;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/* Container around content */
+.container2 {
+  padding: 10px 40px;
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+}
+
+/* The circles on the timeline */
+.container2::after {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -17px;
+  background-color: orange;
   border: 4px solid orange;
   top: 15px;
   border-radius: 50%;
@@ -134,7 +156,7 @@ body {
   top: 22px;
   width: 0;
   z-index: 1;
-  right: 30px;
+  right: 25px;
   border: medium solid white;
   border-width: 10px 0 10px 10px;
   border-color: transparent transparent transparent white;
@@ -148,7 +170,7 @@ body {
   top: 22px;
   width: 0;
   z-index: 1;
-  left: 30px;
+  left: 25px;
   border: medium solid white;
   border-width: 10px 10px 10px 0;
   border-color: transparent white transparent transparent;
