--- a/main.css
+++ b/main.css
@@ -1,228 +1,234 @@
 html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: system-ui;
-  background-color: rgb(0, 102, 104);
-}
-
-.topnav {
-  background-color: rgb(0, 75, 77);
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-}
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: orange;
-  color: black;
-}
-
-.botnav {
-  background-color: rgb(0, 75, 77);
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-}
-
-.botnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.botnav a:hover {
-  background-color: orange;
-  color: black;
-}
-
-#welcomemsg {
-  color: white;
-  margin-top: 50px;
-  text-align: center;
-}
-
-#mepic {
-  text-align: center;
-}
-
-#mepic img {
-  border-radius: 50%;
-  border: 3px solid white;
-  margin-bottom: 20px;
-}
-
-#myinfo {
-  font-size: large;
-  text-align: center;
-  border: 30px solid white;
-  background-color: white;
-  border-radius: 30px;
-  max-width: 700px;
-  margin: 0 auto;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-/* The actual timeline (the vertical ruler) */
-.timeline {
-  position: relative;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-/* The actual timeline (the vertical ruler) */
-.timeline::after {
-  content: "";
-  position: absolute;
-  width: 6px;
-  background-color: white;
-  top: 0;
-  bottom: 0;
-  left: 50%;
-  margin-left: -3px;
-}
-
-/* Container around content */
-.container {
-  padding: 10px 40px;
-  position: relative;
-  background-color: inherit;
-  width: 50%;
-}
-
-/* The circles on the timeline */
-.container::after {
-  content: "";
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  right: -17px;
-  background-color: white;
-  border: 4px solid white;
-  top: 15px;
-  border-radius: 50%;
-  z-index: 1;
-}
-
-/* Container around content */
-.container2 {
-  padding: 10px 40px;
-  position: relative;
-  background-color: inherit;
-  width: 50%;
-}
-
-/* The circles on the timeline */
-.container2::after {
-  content: "";
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  right: -17px;
-  background-color: orange;
-  border: 4px solid orange;
-  top: 15px;
-  border-radius: 50%;
-  z-index: 1;
-}
-
-/* Place the container to the left */
-.left {
-  left: 0;
-}
-
-/* Place the container to the right */
-.right {
-  left: 50%;
-}
-
-/* Add arrows to the left container (pointing right) */
-.left::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  right: 25px;
-  border: medium solid white;
-  border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent white;
-}
-
-/* Add arrows to the right container (pointing left) */
-.right::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  left: 25px;
-  border: medium solid white;
-  border-width: 10px 10px 10px 0;
-  border-color: transparent white transparent transparent;
-}
-
-/* Fix the circle for containers on the right side */
-.right::after {
-  left: -16px;
-}
-
-/* The actual content */
-.content {
-  padding: 20px 30px;
-  background-color: white;
-  position: relative;
-  border-radius: 20px;
-}
-
-/* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
-  /* Place the timelime to the left */
+    scroll-behavior: smooth;
+  }
+  
+  body {
+    font-family: system-ui;
+    background-color: rgb(0, 102, 104);
+  }
+  
+  .topnav {
+    background-color: rgb(0, 75, 77);
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: orange;
+    color: black;
+  }
+  
+  .botnav {
+    background-color: rgb(0, 75, 77);
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .botnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .botnav a:hover {
+    background-color: orange;
+    color: black;
+  }
+  
+  #welcomemsg {
+    color: white;
+    margin-top: 50px;
+    text-align: center;
+  }
+  
+  #mepic {
+    text-align: center;
+  }
+  
+  #mepic img {
+    border-radius: 50%;
+    border: 3px solid white;
+    margin-bottom: 20px;
+  }
+  
+  #myinfo {
+    font-size: large;
+    text-align: center;
+    border: 30px solid white;
+    background-color: white;
+    border-radius: 30px;
+    max-width: 700px;
+    margin: 0 auto;
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
+  
+  /* The actual timeline (the vertical ruler) */
+  .timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  
+  /* The actual timeline (the vertical ruler) */
   .timeline::after {
-    left: 31px;
+    content: "";
+    position: absolute;
+    width: 6px;
+    background-color: white;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
   }
-
-  /* Full-width containers */
+  
+  /* Container around content */
   .container {
-    width: 100%;
-    padding-left: 70px;
-    padding-right: 25px;
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
   }
-
-  /* Make sure that all arrows are pointing leftwards */
-  .container::before {
-    left: 60px;
+  
+  /* The circles on the timeline */
+  .container::after {
+    content: "";
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -17px;
+    background-color: white;
+    border: 4px solid white;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+  }
+  
+  /* Container around content */
+  .container2 {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+  }
+  
+  /* The circles on the timeline */
+  .container2::after {
+    content: "";
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -17px;
+    background-color: orange;
+    border: 4px solid orange;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+  }
+  
+  /* Place the container to the left */
+  .left {
+    left: 0;
+  }
+  
+  /* Place the container to the right */
+  .right {
+    left: 50%;
+  }
+  
+  /* Add arrows to the left container (pointing right) */
+  .left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 25px;
+    border: medium solid white;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
+  }
+  
+  /* Add arrows to the right container (pointing left) */
+  .right::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 25px;
     border: medium solid white;
     border-width: 10px 10px 10px 0;
     border-color: transparent white transparent transparent;
   }
-
-  /* Make sure all circles are at the same spot */
-  .left::after,
+  
+  /* Fix the circle for containers on the right side */
   .right::after {
-    left: 15px;
+    left: -16px;
   }
-
-  /* Make all right containers behave like the left ones */
-  .right {
-    left: 0%;
+  
+  /* The actual content */
+  .content {
+    padding: 20px 30px;
+    background-color: white;
+    position: relative;
+    border-radius: 20px;
   }
-}
+  
+  /* Media queries - Responsive timeline on screens less than 600px wide */
+  @media screen and (max-width: 600px) {
+    /* Place the timelime to the left */
+    .timeline::after {
+      left: 31px;
+    }
+    /* La till en max-width så den inte blir förstor i mobilvy */
+    #mepic img {
+        max-width: 75%;
+    }
+  
+    /* Full-width containers */
+    /* La till .container2 så den också funkade i mobilvy */
+    .container, .container2 {
+      width: 100%;
+      padding-left: 70px;
+      padding-right: 25px;
+    }
+  
+    /* Make sure that all arrows are pointing leftwards */
+    /* Samma här, la till .container2 för att få alla element samma */
+    .container::before, .container2::before {
+      left: 60px;
+      border: medium solid white;
+      border-width: 10px 10px 10px 0;
+      border-color: transparent white transparent transparent;
+    }
+  
+    /* Make sure all circles are at the same spot */
+    .left::after,
+    .right::after {
+      left: 15px;
+    }
+  
+    /* Make all right containers behave like the left ones */
+    .right {
+      left: 0%;
+    }
+  }
